# clean-up

./: .gitignore  CLAUDE.md  INSTALL.md  LICENSE  README.md  package.json  tsconfig.json
.claude/: settings.json
.claude/rules/: workflow.md
frontend/: index.html
scripts/: build.sh  generate-icon.swift  install.sh  launcher.swift
src/: index.ts  types.ts  version.ts
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  types.rs
src-tauri/src/scanners/: app_leftovers.rs  dev_artifacts.rs  homebrew_cleanup.rs  large_old_files.rs  mod.rs  system_caches.rs  unused_apps.rs
src-tauri/src/utils/: apps.rs  fs.rs  mod.rs  trash.rs
src/scanners/: app-leftovers.ts  dev-artifacts.ts  homebrew-cleanup.ts  large-old-files.ts  registry.ts  system-caches.ts  unused-apps.ts
src/tui/: format.ts  prompts.ts
src/utils/: apps.ts  fs.ts  trash.ts
src/web/: server.ts  ui.html
